访问修饰符

--- a/notes/面向对象中级.md
+++ b/notes/面向对象中级.md
@@ -26,5 +26,24 @@ com.公司名.项目名.业务模块名，例如：`com.bjtu.oa.model;`
 
 # 访问修饰符
 
+Java提供四种访问修饰符，用于控制方法和属性的访问权限
+
+1. 公开级别：`public`，对外公开
+2. 受保护级别：`protected`，对子类和同一个包中的类公开
+3. 默认级别：没有修饰符号，对同一个包的类公开
+4. 私有级别：`private`，只有类本身可以访问，不对外公开
+
+<img src="figures/image-20220812101141635.png" alt="image-20220812101141635" align="left" style="zoom: 50%;" />
+
+**使用注意事项**
+
+1. 修饰符可以用于修饰类中的属性、成员方法和类
+2. 只有默认的和`public`才能修饰类
+3. 成员方法的额访问规则和属性完全一样
+
+
+
+
+
 
 
