--- a/notes/04 面向对象中级.md
+++ b/notes/04 面向对象中级.md
@@ -84,6 +84,126 @@ Java提供四种访问修饰符，用于控制方法和属性的访问权限
 
 8. 不能滥用继承，子类和父类之间必须满足 is-a 的逻辑关系
 
+**super和this**
+
+1. 访问属性和方法：
+   1. this：访问本类中的属性，如果本类没有则从父类中继续查找
+   2. super：从父类开始查找属性
+2. 调用构造器：
+   1. this：调用本类构造器，必须放在构造器的首行
+   2. super：调用父类构造器，必须放在构造器的首行
+3. 特殊：this表示当前对象，super在子类中访问父类对象
+
+# Override
+
+子类有一个方法和父类的某个方法名称、返回类型、参数相同，那么就会覆盖父类的方法，要求如下：
+
+1. 子类的方法的参数、方法名称和父类方法的参数、方法名完全一样
+
+2. 子类方法的返回类型和父类方法的返回类型相同，或者是**父类返回类型的子类**，例如：
+
+   ```java
+   public Object getInfo() {}
+   public String getInfo() {} //String是Object的子类，因此同样构成方法重写
+   ```
+
+3. 子类方法不能缩小父类方法的访问权限，例如：
+
+   ```java
+   void sayOk() {}
+   public void sayOk() {} // 访问权限public > protected > default > private
+   ```
+
+# 多态
+
+多态指的是方法或者对象具有多种形态，是面向对象的第三大特征。多态是建立在封装和继承基础之上的
+
+多态的具体体现：
+
+1. 方法的多态，重写和重载就体现多态
+
+   1. 重载：使用不同的参数列表就能够使用不同的函数功能
+   2. 重写：调用不同类的函数能够使用不同的功能
+
+2. 对象的多态（核心、重点）
+
+   1. 一个对象的编译类型和运行类型可以不一致
+
+      可以让父类的引用指向子类的对象，编译类型和运行类型不同，例如：
+
+      ```java
+      Animal animal = new Dog();
+      ```
+
+      这里的编译类型是`Animal`，运行类型是`Dog`
+
+   2. 编译类型在定义对象时就确定了，不能改变
+
+   3. 运行类型是可以变化的，例如：
+
+      ```java
+      animal = new Cat();
+      ```
+
+      这里的`animal`指向了`Cat`，但是它的编译类型依然是`Animal`，只是运行类型变成了`Cat`
+
+   4. 编译类型看定义时 = 号的左边，运行类型看 = 号的右边
+
+      从上文可以看出，编译类型为等号左边的`Animal`，运行类型是等号右边的`Dog`，后来又改成了`Cat`
+
+   如果需要使用某个方法，方法中需要传入不同的子类作为参数，从而需要编写多个方法。那么可以将子类替换为父类，直接使用父类的属性和方法，因为父类可以兼容子类，这样就避免了编写多个函数，用一个函数就能解决。
+
+   例如“宠物喂食”问题，动物大类中有多个子类：猫、狗、猪、鱼，食物大类也有多个子类：猫粮、骨头、饼干、米饭
+
+   ```java
+   public void feed(Animal animal, Food food) {
+       System.out.println(animal.getName() + "吃" + food.getName())
+   }
+   ```
+
+**注意事项和细节**
+
+1. 多态的前提是：两个对象（类）存在继承关系；
+
+2. 多态的**向上转型**：本质是父类的引用指向了子类的对象
+
+3. 多态的**向下转型**：
+
+   1. 语法：子类类型 引用名 = （子类类型）父类引用；例如：
+
+      ```java
+      Animal animal = new Dog();
+      Dog dog = (Dog) animal;
+      ```
+
+      语法和强制类型转换基本相同
+
+   2. 只能强转父类的引用，不能强转父类的对象
+
+   3. 要求父类的引用必须指向的是当前目标类型的对象
+
+   4. 可以调用子类类型中所有的成员
+
+4. 属性没有重写之说，属性的值看**编译类型**，例如
+
+   ```java
+   class Base {int count = 10;}
+   class Sub extends Base {int count = 20;}
+   Base base = new Sub();
+   System.out.println(base.count); //10
+   ```
+
+5. `instanceof`比较操作符，用于判断对象的**运行类型**是否为某类型或者某类型的子类型，例如
+
+   ```java
+   BB bb = new BB(); // BB extends AA，AA是父类
+   System.out.println(bb instanceof BB); // true，对象是某类型
+   System.out.println(bb instanceof AA); // true，对象是某类型的子类型
+   AA aa = new BB(); // 运行类型是BB
+   System.out.println(aa instanceof BB); // true，对象是某类型
+   System.out.println(aa instanceof AA); // true，对象是某类型的子类型
+   ```
+
 
 
 
