多态部分基本完成

--- a/notes/04 面向对象中级.md
+++ b/notes/04 面向对象中级.md
@@ -204,7 +204,38 @@ Java提供四种访问修饰符，用于控制方法和属性的访问权限
    System.out.println(aa instanceof AA); // true，对象是某类型的子类型
    ```
 
+## 动态绑定机制
 
+1. 当调用对象方法时，该方法会和该对象的**内存地址（运行类型）绑定**
+2. 当调用对象属性时，没有动态绑定机制，哪里声明就在哪里使用
 
+## 多态的应用
 
+1. 多态数组：数组的定义类型为父类类型，里面保存的实际元素类型为子类类型
+
+   实例：要求创建1个Person对象、2个Student对象和2个Teacher对象，放在一个数组中，并调用每个对象的`say()`方法
+
+   实例升级：如何调用子类特有的方法，例如Teacher的`teach()`和Student的`study()`
+
+   ```java
+   if (persons[i] instanceof Student) {
+       (Student)persons[i].study();
+   } else if (persons[i] instanceof Teacher) {
+       (Teacher)persons[i].teach();
+   } else {
+       persons[i].say();
+   }
+   ```
+
+   使用向下转型，即可实现调用不同子类对象特定的方法
+
+2. 多态参数：方法定义的形参类型为父类类型，实参类型允许为子类类型
+
+   实例1：之前的主人给动物喂食的例子
+
+   实例2：定义员工类`Employee`，包含姓名和月工资[private]，以及计算年工资getAnnual的方法。普通员工和经理继承了员工，经理类多了奖金`bonus`属性和管理`manage`方法，普通员工类多了`work`方法，普通员工和经理类要求分别重写`getAnnual`方法
+
+   测试类中添加一个方法`showEmpAnnual(Employee e)`，实现获取任何员工对象的年工资，并在main方法中调用该方法[e.getAnnual()]。 --> 在定义方法时输入父类对象，即可兼容各个子类对象并调用各自的方法
+
+   测试类中添加一个方法`testWork`，如果是普通员工则调用`work`方法，如果是经理则调用`manage`方法 --> 这就是多态数组中案例所用到的方法
 
