Object类，整体内容基本完成

--- a/notes/04 面向对象中级.md
+++ b/notes/04 面向对象中级.md
@@ -239,3 +239,37 @@ Java提供四种访问修饰符，用于控制方法和属性的访问权限
 
    测试类中添加一个方法`testWork`，如果是普通员工则调用`work`方法，如果是经理则调用`manage`方法 --> 这就是多态数组中案例所用到的方法
 
+# Object类
+
+位置：`java.lang.Object`，每个类都使用Object作为超类
+
+方法摘要：equals, finalize, getclass, hashCode, toString等
+
+1. `equals`：`==`和`equals`的对比：
+
+   1. `==`既可以判断基本类型，又可以判断引用类型
+   2. `==`如果判断基本类型，判断的是值是否相等
+   3. `==`如果判断引用类型，则是判断地址是否相等，也就是判断是不是同一个对象
+   4. `equals`是`Object`类的方法，只能判断引用类型
+   5. `equals`默认判断的是地址是否相等，子类中往往会重写该方法，用于判断内容是否相等，比如`String`, `Integer`
+
+2. `hashCode`：返回该对象的哈希码值，此方法是为了提高哈希表(java.util.HashTable)的性能
+
+   1. 两个引用如果指向同一个对象，则哈希值相同，否则不同
+   2. 哈希值主要根据地址计算而来，但不等价与地址
+   3. 在集合中如果有需要的话会重写hashCode
+
+3. `toString`：返回该对象的字符串表示，默认返回：全类名（包名+类名）+@+哈希值的十六进制
+
+   ```java
+   public String toString {
+       getClass().getName() + "@" +Integer.toHexString(hashCode())
+   }
+   ```
+
+4. `finalize`：当垃圾回收器确定不存在该对象的更多引用时，由对象的垃圾回收器调用此方法，子类可以重写此方法，做一些**释放资源**的操作，例如数据库的连接或者打开的文件
+
+   
+
+
+
