--- a/notes/05 面向对象高级.md
+++ b/notes/05 面向对象高级.md
@@ -59,5 +59,53 @@
 1. 在main方法中，可以直接调用main方法所在类的静态方法或者静态属性
 2. 不能直接访问该类中的非静态成员，必须创建该类的一个实例对象后，才能通过对象去访问非静态成员
 
+# 代码块
+
+代码块又称为初始化块，属于类中的成员，将逻辑语句封装在方法体中，通过{}包围起来
+
+代码块和方法不同，没有方法名和返回值，也没有参数，只有方法体，而且不用通过对象或者类显式调用，而是在加载类时或者创建对象时隐式调用。
+
+基本语法： [修饰符] { 代码 };
+
+**本质理解**
+
+1. 代码块相当于另一种形式的构造器（对构造器的补充机制），可以做初始化的操作
+2. 使用场景：如果多个构造器中都有重复的语句，可以抽取到初始化块中，提高代码的重用性
+
+**注意事项和使用细节**
+
+1. 代码块分两类，使用static修饰的称作静态代码块，没有static修饰的叫做普通代码块/非静态代码块，随着**类的加载**而执行，并且之惠**执行一次**。如果是普通代码块，每创建一个对象就执行
+
+   问题：类什么时候被加载？**（重要）**
+
+   1. 创建对象实例时（new）
+   2. 创建子类对象实例时，父类也会被加载
+   3. 使用类的静态成员时（静态属性，静态方法）
+
+2. 在调用类的静态成员时，普通代码块不会被执行
+
+3. 逻辑语句可以为任何逻辑语句（输入、输出、方法调用、循环、判断等）
+
+4. ;号可以写可以不写，建议写上
+
+5. 创建一个对象时，在一个类中的调用顺序：（重点，难点）
+
+   1. 调用静态代码块和静态属性初始化（调用优先级一样，如果有多个静态代码块和多个静态属性初始化，按照定义的顺序调用）
+   2. 调用普通代码块和普通属性初始化（调用优先级一样，如果有多个...，按照定义顺序调用）
+   3. 调用构造方法
+
+6. 构造器的最前面其实隐含了super()和调用普通代码块。而静态的代码块、属性初始化，在类加载时就执行完毕了，因此是优先于构造器和普通代码块执行，并且由于super和普通代码块在构造器最前面，因此构造方法的调用优先级最低
+
+7. 在创建子类时（继承关系）时，静态/普通代码块、静态/普通属性初始化、构造方法的调用顺序：
+
+   1. 父类的静态代码块和静态属性（优先级一样，按定义顺序执行）
+   2. 子类的静态代码块和静态属性
+   3. 父类的普通代码块和普通属性
+   4. 父类的构造方法
+   5. 子类的普通代码块和普通属性初始化
+   6. 子类的构造方法
+
+8. 静态代码块只能直接调用静态成员，普通代码块可以调用任意成员
+
 
 
