单例设计模式

--- a/notes/05 面向对象高级.md
+++ b/notes/05 面向对象高级.md
@@ -107,5 +107,68 @@
 
 8. 静态代码块只能直接调用静态成员，普通代码块可以调用任意成员
 
+# 单例设计模式
 
+设计模式的概念：
+
+1. 静态方法和属性的经典使用
+2. 在大量实践中总结出的理论化后优选的代码结构、编程风格以及解决问题的思考方式
+
+单例模式的概念：
+
+1. 采用一定的方法保证在整个软件系统中，对某个类只能存在一个对象实例，并且该类只能提供一个取得其对象实例的方法，也就是在软件运行过程中某个类只能有一个实例。
+
+   使用场景：某个耗用资源的核心类只创建一个实例
+
+2. 单例模式的两种方式：饿汉式和懒汉式
+
+**饿汉式具体步骤**：
+
+1. 构造器私有化，用于防止用户直接`new`一个对象
+
+2. 在类的内部创建对象
+
+3. 向外暴露一个静态的公共方法。getInstance，例如：
+
+   ```java
+   class Test {
+       private Test () {}
+       private static Test instance = new Test();
+       public static Test getInstance() { // 用static方法调用static对象
+           return instance;
+       }
+   }
+   ```
+
+4. 代码实现
+
+**懒汉式具体步骤：**
+
+1. 构造器私有化
+
+2. 定义一个static静态属性对象
+
+3. 提供一个public static方法，可以返回一个对象
+
+4. 代码实现，例如：
+
+   ```java
+   class Test {
+       private Test() {};
+       private static Test test; // 定义对象，但不创建
+       public static Test getInstance() {
+           if (test == null) { // 只有在第一次被调用的时候才会创建对象
+               test = new Test();
+           }
+           return test;
+       }
+   }
+   ```
+
+**饿汉式vs懒汉式**
+
+1. 主要区别在于创建对象的时机不同，饿汉式时在类加载时就创建对象实例，懒汉式是在使用时创建
+2. 饿汉式不存在线程安全问题（？），懒汉式存在线程安全问题
+3. 饿汉式存在资源浪费可能，懒汉式不存在
+4. 在javaSE标准类中，java.lang.Runtime就是经典的单例模式
 
