--- a/notes/05 面向对象高级.md
+++ b/notes/05 面向对象高级.md
@@ -172,3 +172,31 @@
 3. 饿汉式存在资源浪费可能，懒汉式不存在
 4. 在javaSE标准类中，java.lang.Runtime就是经典的单例模式
 
+# final关键字
+
+final可以修饰类、属性、方法和局部变量
+
+使用场景：
+
+1. 不希望类被继承时，可以用final修饰，例如某个类比较重要，不希望被继承重写产生bug
+2. 当不希望父类的某个方法被子类覆盖/重写（override）
+3. 当不希望类的某个属性的值被修改，可以用final修饰（不允许重新分配值），对于数组来说并不影响修改内部的元素，因为变量的值只是一个地址，只要不修改地址就没关系
+4. 当不希望某个局部变量被修改
+
+**注意事项和细节**
+
+1. final修饰的属性又叫做常量，一般用XX_XX_XX来命名（字母全部都是大写，使用规范）
+2. final修饰的属性在定义时，必须进行初始化，并且以后不可以再修改，赋值的位置可以是：
+   1. 定义时，例如`public final double TAX_RATE=0.9`
+   2. 在构造器中
+   3. 再代码块中
+3. 如果final修饰的属性是静态的，则初始化的位置只能是1. 定义时；2. 静态代码块，**不能在构造器中赋值**
+4. final类不能继承，但是可以实例化对象
+5. 如果类不是final类但是包含final的方法，那么虽然不能被重写，但是可以被继承
+6. 一般来说如果一个类已经是final类，那么就没必要把方法修饰成final方法
+7. final不能修饰构造方法（即构造器）
+8. final和static往往搭配使用，效率更高，因为底层编译器做了优化处理，不会导致类加载。如果只是想调用属性和方法，不希望属性加载，就可以两个搭配使用
+9. 包装类（Integer, Double, Float, Boolean等）以及String都是final类，不能被继承
+
+
+
