--- a/notes/05 面向对象高级.md
+++ b/notes/05 面向对象高级.md
@@ -198,5 +198,28 @@ final可以修饰类、属性、方法和局部变量
 8. final和static往往搭配使用，效率更高，因为底层编译器做了优化处理，不会导致类加载。如果只是想调用属性和方法，不希望属性加载，就可以两个搭配使用
 9. 包装类（Integer, Double, Float, Boolean等）以及String都是final类，不能被继承
 
+# 抽象类
 
+抽象类基本概念
+
+1. 用`abstract`关键字修饰一个类，那么这个类就是抽象类，例如`abstract class A {}`
+
+2. 如果用abstract来修饰一个方法，这个方法就是抽象方法（没有方法体），例如：
+
+   ```java
+   public abstract void eat();
+   ```
+
+3. 抽象类的价值更多是在于设计，设计好之后让子类继承并实现。大部分的设计模式中都会用到抽象类
+
+**注意事项与使用细节**
+
+1. 抽象类不能被实例化
+2. 抽象类不一定要包含抽象方法，还可以有实现的方法，也就是说一个抽象类里也可以有具体的程序
+3. 一个类**包含了抽象方法，必须把它声明为抽象类**
+4. abstract关键字只能修饰类和方法，不能修饰属性和其他
+5. 抽象类可以有任意成员（因为抽象类还是类），比如非抽象方法、构造器、静态属性等
+6. 抽象方法不能有主体，也就是不能有{}
+7. 如果一个类继承了抽象类，那么就必须实现抽象类里的所有抽象方法，除非它自己也声明为抽象类
+8. 抽象方法**不能使用private, final, static来修饰**，因为这些关键字都是和重写相违背的
 
