--- a/notes/05 面向对象高级.md
+++ b/notes/05 面向对象高级.md
@@ -223,3 +223,71 @@ final可以修饰类、属性、方法和局部变量
 7. 如果一个类继承了抽象类，那么就必须实现抽象类里的所有抽象方法，除非它自己也声明为抽象类
 8. 抽象方法**不能使用private, final, static来修饰**，因为这些关键字都是和重写相违背的
 
+# 接口
+
+接口就是给出一些没有实现的方法，封装到一起，到某个类要使用的时候再根据具体情况把这些方法写出来
+
+语法： interface 接口名 {属性，方法}；class 类名 implements 接口 {自己属性；自己方法；必须实现的抽象方法}
+
+注：在jdk7.0前，接口里的方法都没有方法体，都是抽象方法，jdk8.0后接口可以有静态方法，默认方法，也就是说接口中可以有方法的具体实现，但是需要用`default`关键字修饰，也可以有静态方法
+
+**注意事项和细节**
+
+1. 接口不能被实例化，因为接口是一种特别的抽象类
+
+2. 接口中所有的方法都是public方法，接口中抽象方法可以不用`abstract`修饰
+
+3. 一个普通类实现接口，就必须将该接口的所有方法都实现（快捷键：alt+enter）
+
+4. 抽象类实现接口，可以不用实现接口的方法
+
+5. 一个类同时可以实现多个接口
+
+6. 接口中的属性只能是final的，而且是`public static final`修饰符，比如`int a = 1;`，实际上是`public static final int a = 1`，只是前面的修饰符被隐藏了，因为能够凭借接口直接访问属性，就说明属性是`static`的，而且接口的存在意义就是提供一个模板，本来就不应该被修改，因此应该是`final`的
+
+7. 接口不能继承其他的类，但是可以继承多个别的接口，例如
+
+   ```java
+   interface A extends B, C {}
+   ```
+
+8. 接口中的修饰符必须是`public`或者默认，这一点和类的修饰符是一样的
+
+## 实现接口 vs 继承类
+
+接口是继承的补充，因为子类只能继承一个父类（单继承），而接口则可以实现多继承
+
+1. 接口和继承解决的问题不同
+
+   继承的价值在于：解决代码的复用性和可维护性
+
+   接口的价值在于：设计各种规范方法，让其他类去实现这些方法
+
+2. 接口比继承更加灵活
+
+   继承满足is - a 的关系，而接口只需要满足like - a的关系
+
+3. 接口在一定程度上实现代码解耦（即 接口规范性+动态绑定）
+
+## 接口的多态特性
+
+1. 多态参数
+
+2. 多态数组
+
+3. 接口存在多态传递现象
+
+   ```java
+   interface IH {}
+   interface IG extends IH {}
+   class Teacher implements IG {}
+   IG ig = new Teacher();
+   IH ih = new Teacher(); // IG继承IH接口，那么IH同样可以使用多态
+   ```
+
+
+
+
+
+
+
