--- a/notes/05 面向对象高级.md
+++ b/notes/05 面向对象高级.md
@@ -285,6 +285,192 @@ final可以修饰类、属性、方法和局部变量
    IH ih = new Teacher(); // IG继承IH接口，那么IH同样可以使用多态
    ```
 
+# 内部类
+
+一个类的内部又完整地嵌套了另一个类结构，被嵌套的类称为内部类（inner class），嵌套其他类的类称为外部类（outer class）。
+
+类的五大成员：属性、方法、构造器、代码块、内部类，例如：
+
+```java
+class Outer {
+    private int n1 = 100; //属性
+    public Outer(int n1) {//构造器
+        this.n1 = n1;
+    }
+    public void m1() {} //方法
+    {
+        ...;//代码块
+    }
+    class Inner {} //内部类，在Outer类的内部
+}
+```
+
+**内部类的分类：**
+
+1. 定义在外部类的局部位置上（例如方法内）：
+   1. 局部内部类（有类名）
+   2. 匿名内部类（没有类名，**重点**）
+2. 定义在外部类的成员位置上
+   1. 成员内部类（没用static修饰）
+   2. 静态内部类（使用static修饰）
+
+## 局部内部类
+
+局部内部类是定义在外部类的局部位置，例如方法中，并且有类名
+
+1. 可以直接访问外部类的所有成员，包括私有的
+
+2. 不能添加访问修饰符，因为它的地位就是一个**局部变量**，但是可以使用final修饰，因为局部变量也可以使用final，那么类就不能被继承，因为继承类的目的就是为了修改
+
+3. 作用域：仅仅在定义它的方法或代码块中
+
+4. 局部内部类可以直接访问外部类的成员
+
+5. 外部类在方法中要访问局部内部类的成员，访问方式为：创建对象，再访问**（必须在作用域内**）
+
+6. 外部其他类不能访问局部内部类，因为局部内部类是一个局部变量
+
+7. 如果外部类和局部内部类的成员重名时（即在内部类中创建一个名称与外部类属性名相同的属性），默认遵循就近原则，如果想访问外部类的成员，则可以使用 （外部类名.this.成员）去访问
+
+   ```java
+   class Outer {
+       private int n1 = 100;
+       final class Inner{
+           private int n1 = 800;
+           public void f1() {
+               System.out.println(Outer.this.n1); //调用外部类的属性，外部类名.this.成员
+           }
+       }
+   }
+   ```
+
+   这么做的意义在于区分本类和外部类，因为内部类也是一个类，也有`this`方法，使用 外部类名.this.成员的方式能够指定调用外部类的成员
+
+## 匿名内部类***
+
+匿名内部类是定义在外部类的局部位置（例如方法）中的类，并且没有类名
+
+本质：（1）本质是类；（2）内部类；（3）没有名字（底层分配名字）；（4）同时还是一个对象
+
+基本语法： new 类或接口（参数列表）{ 类体 };
+
+**基于接口的匿名内部类**
+
+1. 需求：想使用一个接口`IA`，并创建对象
+
+2. 传统方式：写一个类，实现该接口，并创建对象
+
+3. 新需求：一个类只想使用一次，以后不再使用
+
+4. 解决方案：使用匿名内部类来简化开发，代码举例：
+
+   ```java
+   class Outer {
+       public void f1() {
+           IA tiger = new IA() { // IA 是一个接口
+               @override
+               public void cry() {
+                   System.out.println("...");
+               }
+           };
+           tiger.cry();
+       }
+   }
+   ```
+
+   `tiger`的编译类型是`IA`，运行类型是**匿名内部类**，名称为 外部类名$1，底层实现了：
+
+   ```java
+   class Outer$1 implements IA {...}
+   ```
+
+   并且**创建实例**，把地址返回给了`tiger`
+
+5. 匿名内部类只能使用一次，因为在底层实现类并返回实例之后，类就找不到了，只能使用实例
+
+**基于类的匿名内部类**
+
+可以重写类的方法并传入参数（构造器），例如：
+
+```java
+Father father = new Father("jack") {
+    @Override
+    public void test() {
+        ...;
+    }
+};
+father.test();
+```
+
+匿名内部类是继承了原来的父类，然后重写成员方法，同时也可以调用父类的方法
+
+**注意事项与使用细节**
+
+1. 匿名内部类可以直接调用，可以不接收实例的地址，例如：
+
+   ```java
+   new Person() {
+       @Override
+       public void hi() {
+           ...;
+       }
+   }.hi();
+   ```
+
+2. 可以**直接访问**外部类的所有成员，包含私有的
+
+## 成员内部类
+
+成员内部类是定义在外部类的成员位置，并且没有`static`修饰
+
+1. 可以访问外部类的所有成员，包括私有的
+
+2. 可以添加任意访问修饰符（public, protected, 默认, private）因为它的地位就是成员
+
+3. 外部其他类，使用成员内部类的两种方式：
+
+   1. ```java
+      Outer.Inner inner = Outer.new Inner();
+      ```
+
+   2. ```java
+      public Inner getInnerInstance() {
+          return new Inner();
+      }//在外部类中定义一个返回内部类实例的方法
+      ```
+
+4. 如果外部类和内部类成员重名，遵守就近原则，同上【局部内部类】
+
+## 静态内部类
+
+静态内部类是定义在外部类的成员位置，并且有`static`修饰
+
+1. 可以直接访问外部类的所有静态成员，包括私有的，但是不能访问非静态成员
+
+2. 可以添加访问修饰符（...）
+
+3. 作用域：同其他成员
+
+4. 外部类访问静态内部类的方式：创建对象，再访问
+
+5. 外部其他类访问静态内部类的方式：
+
+   1. ```java
+      Outer.Inner inner = new Outer.Inner();
+      ```
+
+      直接通过类去访问并创建，而不需要`Outer.new Inner()`，前提是满足访问权限
+
+   2. 编写一个能够返回内部类实例的方法，例如：
+
+      ```java
+      public static Inner getInnerInstance() {
+          return new Inner();
+      }
+      ```
+
+6. 如果外部类和静态内部类成员重名时，默认遵循就近原则，如果要访问外部类成员，则可以使用**外部类名.成员**去访问，因为内部类是静态的，因此不能使用`this`
+
 
 
 
