--- a/notes/06 枚举和注解.md
+++ b/notes/06 枚举和注解.md
@@ -63,6 +63,48 @@
 
 `compareTo`: 比较两个枚举常量，比较的是编号，两个对象的编号相减
 
+# 注解
+
+注解的基本概念：
+
+1. 注解(Annotation)也被称为元数据(Metadata)，用于修饰解释 包、类、方法、属性、构造器、局部变量等信息
+2. 和注释一样，注解不影响程序逻辑，但是注解可以被编译或运行，相当于嵌入在代码中的补充信息
+
+三个基本的Annotation：
+
+1. `@Override`：限定某个方法是重写父类方法，只能修饰方法，不能修饰其他
+
+   1. 如果写了`@Override`注解，编译器就回去检查该方法是否真的重写了父类的方法，如果没有构成重写则编译错误，意义在于对程序进行语法校验
+   2. 查看`@Override`的源码为`@Target(ElementType.METHOD)`，其中`@Target`是修饰注解的注解，称为**元注解**
+
+2. `@Deprecated`：表示某个程序元素（类、方法、属性等）已过时（依然可以使用，但是不推荐），作为新旧版本的过渡
+
+3. `@SuppressWarnings`：抑制编译器警告，使用方式：`@SuppressWarnings({"警告类别"})`，包含多种警告类别，例如：
+
+   ```java
+   @SuppressWarnings({"all"}) // 全部抑制
+   @SuppressWarnings({"rawtypes", "unchecked", "unused"}) // 针对性抑制
+   ```
+
+   作用范围：与放置的位置相关，如果放置在`main`方法上方，那么抑制警告的范围就是`main`方法，也可以精准控制一条语句。如果放置在整个类的上方，那么抑制的就是整个类
+
+**JDK的元注解（了解）**
+
+学习目的：在阅读源码时能够理解注解的含义
+
+元注解的种类：
+
+1. Retention: 指定注解的作用范围，只能修饰一个Annotation定义，用于指定该Annotation可以保留多长时间，`@Retention`包含三种值，分别为：
+   1. `RetentionPolicy.SOURCE`: 编译器使用后直接丢弃这种策略的注释
+   2. `RetentionPolicy.CLASS`: 编译器把注解记录在class文件中，当运行Java程序时，JVM不会保留注解
+   3. `RetentionPolicy.RUNTIME`: 编译器把注解记录在class文件中，当运行程序时，JVM会保留注解
+2. Target: 指定注解可以在哪里使用，用于指定被修饰的Annotation能够修饰哪些元素
+3. Documented：指定被修饰的Annotation类将被javadoc工具提取成文档，即在生成文档时可以看到该注解
+
+
+
+
+
 
 
 
