--- a/notes/07 异常.md
+++ b/notes/07 异常.md
@@ -21,9 +21,8 @@
     - ArrayIndexOutOfBoundsException
     - ClassCastException
     - NumberFormatException
-  - 编译时异常
-    - FileNotFoundException
-    - ClassNotFoundException
+  - FileNotFoundException
+  - ClassNotFoundException
 
 ## 常见运行时异常
 
@@ -76,10 +75,74 @@ int num = Integer.parseInt(num); // 抛出异常
        如果没有发生异常，catch块不会执行
    } finally {
        不管try代码块是否有异常发生，始终要执行finally
+       如果没有finally,语法也可以通过
    }
    ```
 
-2. throws：将发生的异常抛出，交给调用者（方法）来处理，最顶级的处理者就是JVM，JVM处理异常的方式就是直接输出异常信息并中断（退出）程序，程序默认执行`throws`
+   可能有多个异常，可以使用多个`catch`分别捕获不同的异常，并相应地做出处理，要求子类异常写在前面，父类异常写在后面
+
+2. throws：将发生的异常抛出，交给调用者（方法）来处理，最顶级的处理者就是JVM，JVM处理异常的方式就是直接输出异常信息并中断（退出）程序，程序默认执行`throws`。
+
+   1. throws后面的异常类型可以是方法中产生的异常类型，也可以是它的父类，例如`Exception`或者`RuntimeException`
+
+   2. throws后面也可以是异常列表，即可以抛出多个异常，例如：
+
+      ```java
+      public void f1() throws FileNotFoundException, NullPointerException {
+          FileInputStream fis = new FileInputStream('..dfas')
+      }
+      ```
+
+   **注意事项和使用细节**
+
+   1. 对于编译异常，必须处理
+
+   2. 对于运行时异常，如果没有处理，默认就是throws处理
+
+   3. 子类重写父类的方法时，对于抛出异常的规定：
+
+      子类重写的方法所抛出的异常类型要么和父类抛出的异常一致，要么为父类抛出的异常类型的子类型，例如
+      ```java
+      class Father {
+          public void method() throws RuntimeException {}
+      }
+      class Son extends Father {
+          @Override
+          public void method() throws ArithmeticException{}
+      }
+      ```
+
+
+# 自定义异常
+
+当程序中出现了某个错误，但该错误信息并没有在`Throwable`中描述，可以自己设计异常类用于描述该错误信息
+
+自定义异常的步骤：
+
+1. 定义类：自定义异常类名 继承 Exception或者RuntimeException
+2. 如果继承Exception，属于编译一场
+3. 如果继承RuntimeException，属于运行异常（一般继承RuntimeException）
+
+```java
+class AgeException extends RuntimeException {
+    public AgeException(String message) {//构造器
+    	super(message)
+    }
+}
+...;
+if (...) {
+    throw new AgeException("报错内容...")
+}
+```
+
+**throw vs throws**
+
+1. throws是异常处理的一种方式，位置在方法声明处，后面跟的是异常类型
+2. throw是手动生成异常对象的关键字，位置在方法体中，后面跟的是异常对象
+
+
+
+
 
 
 
